--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,16 +3,38 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <h:body>
 
+    <div>
+        <h:outputLabel for="name">name</h:outputLabel>
+        <h:inputText id="name" value="#{countriesBean.filterName}"/>
+    </div>
 
-
+    <h:form>
     <table>
         <ui:repeat value="#{gapminderBean.years}" var="year">
             <tr>
-                <th>#{year}</th>
+                <th><h:button value="#{year.year}" onclick="#{gapminderBean.filterYear = year.year}"/></th>
+            </tr>
+        </ui:repeat>
+    </table>
+    </h:form>
+    <table>
+        <ui:repeat value="#{gapminderBean.countries}" var="country">
+            <tr>
+                <th>#{country.country}</th>
+                <th>#{country.lifeExp}</th>
+            </tr>
+        </ui:repeat>
+    </table>
+    <table>
+        <ui:repeat value="#{gapminderBean.continents}" var="continent">
+            <tr>
+                <th>#{continent.continent}</th>
+                <th>#{continent.lifeExp}</th>
             </tr>
         </ui:repeat>
     </table>
